<resources>
    <string name="app_name">2048</string>
    <string name="app_name_long">YiPuzzles</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_stat">Statistics</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- ###GAME###-->
    <string name="title_activity_game">2048</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly App 2048?</string>
    <string name="help_whatis_answer">The Privacy Friendly App 2048 is a privacy friendly version of the well-known original game 2048. It has the same functions without using data from the user.</string>
    <string name="help_color">How can I change the color spectre of the game?</string>
    <string name="help_color_answer">In the chapter configurations is an option to change between two color spectre for the game.</string>
    <string name="help_play">What is the goal of this game?</string>
    <string name="help_play_answer">The goal of this game to get the number 2048. With combining numbers with the same value you can reach higher and higher numbers. You can find an extensive explanation under the topic tutorial.</string>
    <string name="help_play_how">How do I move the numbers?</string>
    <string name="help_play_how_answer">Swipe the display with your finger in the direction in which you want the numbers to move. </string>
    <string name="help_play_add">How do I reach higher numbers?</string>
    <string name="help_play_add_answer">If two equal numbers are pushed into each other, they add up to the next higher power of two.</string>
    <string name="help_undo">Is it possible to undo steps?</string>
    <string name="help_undo_answer">The app gives you the option to undo your last step in the game. You have to click on the button with the arrow against clockwise direction.</string>
    <string name="help_tip">How to beat the game?</string>
    <string name="help_tip_answer">There are a few strategies to win this game. On YouTube you can find a lot of videos which are covering this topic.</string>
    <string name="help_privacy">What makes the app privacy friendly?</string>
    <string name="help_privacy_answer">This privacy friendly app does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">This app does not require any permission.</string>

    <!-- ### WELCOME DIALOG ### -->
    <string name="okay">Okay</string>


    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version">Version: </string>
    <string name="version_number">v %s</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names">Saskia Jacob and Julian Wadephul</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="privacy_friendly">This application belongs to the group of Privacy Friendly Apps developed by Karlsruhe Institute of Technology (KIT). Sourcecode licensed under GPLv3. Images copyright KIT and Google Inc.</string>
    <string name="more_info">More information can be found on:</string>
    <string name="github" translatable="false"><a href="https://github.com/lingyicute/YiPuzzles">Github-Repo</a></string>
    <string name="url" translatable="false"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>

    <!-- ###SETTINGS### -->
    <string name="settings_name">Settings</string>
    <string name="settings_animation">Activate Animation</string>
    <string name="settings_display">Activate Screen Lock</string>
    <string name="settings_color">Select Color Scheme</string>
    <string name="settings_color_system">System</string>
    <string name="settings_color_light">Light</string>
    <string name="settings_color_dark">Dark</string>
    <string name="settings_color_scheme_material_you">Material You</string>
    <string name="settings_color_scheme_classic">Classic Blue</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_category_game">Game</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_dynamic_colors">Dynamic colours</string>
    <string name="settings_dynamic_colors_summary">Use colours from your wallpaper (Android 12+)</string>
    <string name="settings_animation_summary">Animate moving and merging tiles</string>
    <string name="settings_display_summary">Keep the screen on while playing</string>
    <string name="settings_color_summary_dynamic">Tiles follow the app colours</string>
    <string name="choose_board_size">Choose a board size</string>
    <string name="reset_stats_confirm_title">Reset statistics?</string>
    <string name="reset_stats_confirm_message">All statistics of every board size will be deleted. This cannot be undone.</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="restart">Restart</string>
    <string name="previous">Previous</string>
    <string name="settings_color_scheme_original">Original</string>

    <!-- ### CHOOSE DIALOG ### -->
    <string name="new_Game_Button">Start New Game</string>
    <string name="continue_Game_Button">Continue Game</string>
    <string name="Record_Button">Record</string>
    <string name="Points_Button">Points</string>
    <string name="Winning_Message">You won. Would you like to continue?</string>
    <string name="Yes_Message">Yes</string>
    <string name="No_Message">No</string>
    <string name="Titel_V_Message">Victory</string>
    <string name="Titel_L_Message">Achieved Score: %1$d</string>
    <string name="Lost_Message">No more moves are possible. Your achieved score was: %1$d. Would you like to start a new game?</string>


    <!-- ###TUTORIAL### -->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="Tutorial_Titel">Welcome!</string>
    <string name="Tutorial_Instruction">In the following slides you will learn how to play the Game 2048.</string>
    <string name="Tutorial_Titel_Move">Learn how to move the numbers!</string>
    <string name="Tutorial_Move">To move all the numbers in the possible position in one direction, you have to swipe your finger in the same way.</string>
    <string name="Tutorial_Titel_Add">How to Combine the Numbers!</string>
    <string name="Tutorial_Add">To get the next higher power of 2 you have to combine numbers with the same value. The goal is to reach 2048 and higher.</string>

    <!-- ###STATISTICS### -->
    <string name="Stat_High_Number">Highest Number</string>
    <string name="Stat_High_Point">Highest Score</string>
    <string name="Stat_Amount_Undo">Used Undo-Button</string>
    <string name="Stat_Amount_Swipe">Total Amount of Swipes</string>
    <string name="Stat_Swipes_Left">Left</string>
    <string name="Stat_Swipes_Right">Right</string>
    <string name="Stat_Swipes_Down">Down</string>
    <string name="Stat_Swipes_Up">Up</string>
    <string name="Stat_Time">Playing Time</string>
    <string name="Stat_Time_Swipes">Time per Swipe</string>
    <string name="reset_stats">Reset Statistics</string>

    <!-- ###AIR ACTIONS### -->
    <string name="swipe_up">Swipe Up</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="undo">Undo</string>

</resources>
