<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_example"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_main" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_tutorial"
            android:title="@string/action_tutorial" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_stat"
            android:title="@string/action_stat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
